--- a/_includes/styl/main.styl
+++ b/_includes/styl/main.styl
@@ -35,9 +35,7 @@ p
 #sidebar
   min-height 100%
   z-index 1200
-  position fixed
   background #efefef
-  width 250px
 
   .sidebar-nav
     border-right 1px solid #c2c2c2
